data/derived/sp14/progs/unify/prog1245.ml.out
Characters 239-240:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a list -> 'b list -> ('a * 'b) list
       but an expression was expected of type 'a list -> 'b list -> 'a list
       The type variable 'a occurs inside 'a * 'b
